<resources>
    <string name="app_name">BookShelf</string>
    <string name="log_in">Log In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="password_reset">Password Reset</string>
    <string name="send">Send</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend">Recommend</string>
    <string name="borrowed_to">Borrowed to</string>
    <string name="shelf">Shelf</string>
    <string name="row">Row</string>
</resources>