<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_margin24"
        android:layout_marginTop="@dimen/global_margin24"
        android:layout_marginEnd="@dimen/global_margin24"
        android:text="@string/password_reset"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/global_margin24"
        android:layout_marginTop="@dimen/global_margin24"
        app:layout_constraintBottom_toTopOf="@id/buttonSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/e_mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_margin24"
        android:layout_marginTop="@dimen/margin32"
        android:layout_marginEnd="@dimen/global_margin24"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/global_margin64"
        android:layout_marginStart="@dimen/global_margin24"
        android:layout_marginTop="@dimen/buttonBetween8"
        android:layout_marginEnd="@dimen/global_margin24"
        android:background="@android:color/transparent"
        android:text="@string/help"
        android:textColor="@color/colorSecondaryVariant"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonFeedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSend" />

    <Button
        android:id="@+id/buttonFeedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/global_margin64"
        android:layout_marginStart="@dimen/global_margin24"
        android:layout_marginTop="@dimen/buttonBetween8"
        android:layout_marginEnd="@dimen/global_margin24"
        android:layout_marginBottom="@dimen/buttonMargin64"
        android:background="@android:color/transparent"
        android:text="@string/feedback"
        android:textColor="@color/colorSecondaryVariant"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHelp" />




</androidx.constraintlayout.widget.ConstraintLayout>